<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eze.ui.fragments.AccountSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


       <ImageView
            android:id="@+id/img_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/account_image" />

        <!--Account layout-->
        <RelativeLayout
            android:id="@+id/relLayout_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_account_role"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_account_id_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_id"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_account_id_placeholder"
                android:layout_marginTop="5dp"
                android:text="@string/mock_account_id"
                android:textColor="#61000000"
                android:textSize="15sp" />

        </RelativeLayout>

        <!--Username layout-->
        <RelativeLayout
            android:id="@+id/relLayout_account_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/relLayout_account_id"
            app:layout_constraintStart_toStartOf="@+id/relLayout_account_id"
            app:layout_constraintTop_toBottomOf="@id/relLayout_account_id">

            <TextView
                android:id="@+id/txt_account_username_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_account_username_placeholder"
                android:layout_marginTop="5dp"
                android:text="@string/mock_account_username"
                android:textColor="#61000000"
                android:textSize="15sp" />

        </RelativeLayout>

        <!--Password layout-->
        <RelativeLayout
            android:id="@+id/relLayout_account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/relLayout_account_username"
            app:layout_constraintStart_toStartOf="@+id/relLayout_account_username"
            app:layout_constraintTop_toBottomOf="@id/relLayout_account_username">

            <TextView
                android:id="@+id/txt_account_password_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"

                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relLayout_account_password"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_accountName"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Account name"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintStart_toStartOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/txt_account_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Account Role"
            app:layout_constraintEnd_toEndOf="@+id/txt_accountName"
            app:layout_constraintStart_toStartOf="@+id/txt_accountName"
            app:layout_constraintTop_toBottomOf="@+id/txt_accountName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>