<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.eze.ui.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/fragment_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="150dp"
                android:hint="@string/password"/>

            <EditText
                android:id="@+id/fragment_edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/fragment_edt_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/username"/>

            <Button
                android:id="@+id/fragment_btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@id/fragment_edt_password"
                app:layout_constraintStart_toStartOf="@id/fragment_edt_password"
                app:layout_constraintTop_toBottomOf="@id/fragment_edt_password"
                app:layout_constraintHorizontal_bias="1"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintBottom_toTopOf="@id/fragment_edt_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.494">

<!--                <TextView-->
<!--                    android:layout_centerInParent="true"-->
<!--                    android:text="Request response"-->
<!--                    android:id="@+id/txt_response"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"/>-->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/eze_logo"
                        android:src="@drawable/ezelogo" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/cb_remember_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Remember Account"
                app:layout_constraintEnd_toEndOf="@id/fragment_edt_password"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/fragment_edt_password"
                app:layout_constraintTop_toBottomOf="@id/fragment_edt_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</FrameLayout>